--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -21,19 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[44, 62, 84, 24, 10]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "lst = [(word) for word in \"Hola qué tal andamos\".split(\" \")]\n",
+    "lmbda = lambda x: x + x\n",
+    "\n",
+    "\n",
     "def modify_list(lst, lmbda):\n",
     "    \"\"\"\n",
     "    Input: list and lambda expression\n",
-    "    \n",
     "    Output: the transformed list\n",
     "    \"\"\"\n",
     "    \n",
     "    #your code here:\n",
-    "    \n"
+    "    variable = [lmbda(x) for x in lst]\n",
+    "    return variable\n",
+    "\n",
+    "modify_list(lst,lmbda)"
    ]
   },
   {
@@ -47,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "lmbda = lambda x: x + 273.15\n"
    ]
   },
   {
@@ -64,13 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "modify_list(temps,lmbda)"
    ]
   },
   {
@@ -84,11 +114,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "mod = lambda x,y: 1 if x%y==0 else 0\n",
+    "\n",
+    "print(mod(2,2),mod(3,2))"
    ]
   },
   {
@@ -102,17 +144,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisor(b):\n",
+    "def divisor(b): #Suma factory --> Divisor_factory --> genera el divisor\n",
     "    \"\"\"\n",
     "    input: a number\n",
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    return lambda a: mod(a,b)\n",
+    "    \n",
+    "    # Your code here:\n"
    ]
   },
   {
@@ -124,11 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "divisible5 = divisor(5)\n",
+    "    \n"
    ]
   },
   {
@@ -140,18 +187,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "divisible5(8)"
    ]
@@ -200,14 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Green', 'eggs'), ('cheese', 'cheese'), ('English', 'cucumber'), ('tomato', 'tomato')]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
     "\n",
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "using_zip_with_lambda = lambda list_1,list_2: [x for x in zip(list_1,list_2)]\n",
+    "print(using_zip_with_lambda(list1,list2))"
    ]
   },
   {
@@ -223,14 +303,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('Engineering', 'Lab'), ('Computer Science', 'Homework'), ('Political Science', 'Essay'), ('Mathematics', 'Module'))\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "# Firstly we create the tuple\n",
+    "zip_two_lists = lambda list_1,list_2: tuple([x for x in zip(list_1,list_2)]) #Para que lambda no desordene\n",
+    "both_lists=zip_two_lists(list1,list2)\n",
+    "print(both_lists)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Political Science', 'Essay'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Engineering', 'Lab'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Second step is to create the key fuction\n",
+    "creating_the_key = lambda x: x[1][0]\n",
+    "\n",
+    "# Finally we sort the list\n",
+    "sorted(both_lists, key=creating_the_key)\n"
    ]
   },
   {
@@ -244,13 +365,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
     "# Your code here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Toyota', 1995), ('Honda', 1997), ('Audi', 2001), ('BMW', 2005)]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the key fuction\n",
+    "\n",
+    "sorted(d.items(),key = lambda item: item[1])\n",
+    "\n",
+    "# Item = 1 is the value whilst item = 0 would be the key of the dict"
    ]
   },
   {
@@ -277,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
