--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,30 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your code here\n",
-    "palabras = []\n",
-    "for phrase in corpus:\n",
-    "    palabras += phrase.split(\" \")\n",
-    "bag_of_words = list(dict.fromkeys(palabras))\n",
-    "print(bag_of_words)\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +220,7 @@
    "source": [
     "#Your code\n",
     "for phrase in corpus:\n",
-    "    bag_of_words += phrase.split(\" \")\n",
+    "    bag_of_words += phrase.split(\" \")   \n",
     "bag_of_words = list(dict.fromkeys(bag_of_words))\n",
     "print(bag_of_words)\n",
     "        "
@@ -262,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -286,37 +263,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hola\n",
-      "hola\n",
-      "hola\n",
-      "[[1, 0, 0, 0, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0, 0, 0, 0]]\n"
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at'] ['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I first print both fields to understand whats on each and have idea of what the result should be\n",
+    "print(bag_of_words,corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
      ]
     }
    ],
    "source": [
     "term_freq = []\n",
-    "auxiliar = []\n",
     "term_frequency = 0\n",
+    "term_auxiliar = []\n",
     "# Write your code here\n",
     "\n",
-    "for words in corpus:\n",
-    "    for palabra in bag_of_words:\n",
-    "        if word == palabra:\n",
-    "            print('hola')\n",
-    "            term_frequency += 1\n",
-    "        auxiliar += [term_frequency]\n",
+    "for corp in corpus:\n",
+    "    for word_bag in bag_of_words:\n",
+    "        if word_bag in corp.split(\" \"):\n",
+    "            term_frequency = 1\n",
+    "        term_auxiliar.append(term_frequency)\n",
     "        term_frequency = 0\n",
-    "    term_freq.append(auxiliar)\n",
-    "    auxiliar = []\n",
-    "print(term_freq)\n",
-    "    "
+    "    term_freq.append(term_auxiliar)\n",
+    "    term_auxiliar = []\n",
+    "print(term_freq)    \n"
    ]
   },
   {
@@ -330,9 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 0, 0, 0, 0, 0, 0], [1, 0, 0, 1, 1, 0, 0, 0, 0], [1, 0, 0, 1, 0, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(term_freq)"
    ]
@@ -380,13 +378,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "am\n",
+      "is\n",
+      "at\n",
+      "a\n",
+      "i\n",
+      "['ironhack', 'cool', 'love', 'student']\n",
+      "[[1, 1, 0, 0], [1, 0, 1, 0], [1, 0, 0, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "# Write your code below\n"
+    "# First of all lets clean the bag of words array:\n",
+    "for stop in stop_words:\n",
+    "    for word in bag_of_words:\n",
+    "        if stop == word:\n",
+    "            print(word)\n",
+    "            bag_of_words.remove(word)\n",
+    "print(bag_of_words)\n",
+    "\n",
+    "# Now we repeat the code with a bag of words previously filtered\n",
+    "\n",
+    "term_freq = []\n",
+    "term_frequency = 0\n",
+    "term_auxiliar = []\n",
+    "\n",
+    "\n",
+    "for corp in corpus:\n",
+    "    for word_bag in bag_of_words:\n",
+    "        if word_bag in corp.split(\" \"):\n",
+    "            term_frequency = 1\n",
+    "        term_auxiliar.append(term_frequency)\n",
+    "        term_frequency = 0\n",
+    "    term_freq.append(term_auxiliar)\n",
+    "    term_auxiliar = []\n",
+    "print(term_freq)  "
    ]
   },
   {
