--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -58,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_remastered = prophet[568:]"
    ]
   },
   {
@@ -75,12 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET\\n\\n|Almustafa,',\n",
+       " 'the{7}',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the\\nbeloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_remastered[0:9]"
    ]
   },
   {
@@ -94,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +128,7 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
+    "    return(x.split('{')[0])\n",
     "    "
    ]
   },
@@ -122,12 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET\\n\\n|Almustafa,', 'the', 'chosen', 'and', 'the\\nbeloved,', 'who', 'was', 'a', 'dawn']\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet_reference = list(map(reference,prophet_remastered[0:9]))\n",
+    "print(prophet_reference)"
    ]
   },
   {
@@ -139,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +183,7 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "    return (x.split('\\n'))"
    ]
   },
   {
@@ -167,12 +195,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['PROPHET', '', '|Almustafa,'], ['the'], ['chosen'], ['and'], ['the', 'beloved,'], ['who'], ['was'], ['a'], ['dawn']]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet_line = list(map(line_break,prophet_reference))\n",
+    "print(prophet_line)\n"
    ]
   },
   {
@@ -184,12 +222,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET', '', '|Almustafa,', 'the', 'chosen', 'and', 'the', 'beloved,', 'who', 'was', 'a', 'dawn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "prophet_flat = [word for string in prophet_line for word in string]\n",
+    "print(prophet_flat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same thing but with a lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "#prophet_flat.apply(lambda prophet_line: [word for string in prophet_line for word in string])"
    ]
   },
   {
@@ -203,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +288,8 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
-    "    "
+    "\n",
+    "    return (x not in word_list)"
    ]
   },
   {
@@ -233,6 +297,24 @@
    "metadata": {},
    "source": [
     "Use the `filter()` function to filter out the words speficied in the `word_filter()` function. Store the filtered list in the variable `prophet_filter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PROPHET', '', '|Almustafa,', 'chosen', 'beloved,', 'who', 'was', 'dawn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "prophet_filter = list(filter(word_filter,prophet_flat))\n",
+    "print(prophet_filter)"
    ]
   },
   {
@@ -246,17 +328,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "def word_filter_case(x):\n",
     "   \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
-    "    \n",
+    "\n",
+    "\n",
     "    # Your code here:\n",
+    "    print(x)\n",
     "    \n",
-    "    "
+    "    return (x not in word_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Redifining flat to check the code\n",
+    "prophet_flat_v2 = ['PROPHET', '', '|Almustafa,', 'THE', 'chosen', 'and', 'the', 'beloved,', 'who', 'was', 'a', 'dawn']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['prophet', '', '|almustafa,', 'chosen', 'beloved,', 'who', 'was', 'dawn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "prophet_filter_v2 = list(filter(word_filter,[word.lower() for word in prophet_flat_v2]))\n",
+    "print(prophet_filter_v2)"
    ]
   },
   {
@@ -272,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +399,7 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    return a+' '+b"
    ]
   },
   {
@@ -299,12 +411,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROPHET  |Almustafa, chosen beloved, who was dawn\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_string = reduce(concat_space,prophet_filter)\n",
+    "\n",
+    "print(prophet_string)"
    ]
   },
   {
@@ -320,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,12 +463,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>No</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>pm2.5</th>\n",
+       "      <th>DEWP</th>\n",
+       "      <th>TEMP</th>\n",
+       "      <th>PRES</th>\n",
+       "      <th>cbwd</th>\n",
+       "      <th>Iws</th>\n",
+       "      <th>Is</th>\n",
+       "      <th>Ir</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>1021.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>1.79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-11.0</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>6.71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-14.0</td>\n",
+       "      <td>1019.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>-12.0</td>\n",
+       "      <td>1018.0</td>\n",
+       "      <td>NW</td>\n",
+       "      <td>12.97</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   No  year  month  day  hour  pm2.5  DEWP  TEMP    PRES cbwd    Iws  Is  Ir\n",
+       "0   1  2010      1    1     0    NaN   -21 -11.0  1021.0   NW   1.79   0   0\n",
+       "1   2  2010      1    1     1    NaN   -21 -12.0  1020.0   NW   4.92   0   0\n",
+       "2   3  2010      1    1     2    NaN   -21 -11.0  1019.0   NW   6.71   0   0\n",
+       "3   4  2010      1    1     3    NaN   -21 -14.0  1019.0   NW   9.84   0   0\n",
+       "4   5  2010      1    1     4    NaN   -20 -12.0  1018.0   NW  12.97   0   0"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pm25.head()"
    ]
   },
   {
@@ -358,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,8 +629,14 @@
     "    Input: 48\n",
     "    Output: 2.0\n",
     "    '''\n",
+    "\n",
     "    \n",
     "    # Your code here:\n",
+    "    \n",
+    "    try: \n",
+    "        return x/24\n",
+    "    except:\n",
+    "        return 0\n",
     "    "
    ]
   },
@@ -385,12 +649,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Iws</th>\n",
+       "      <th>Is</th>\n",
+       "      <th>Ir</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.074583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.205000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.279583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.410000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.540417</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Iws   Is   Ir\n",
+       "0  0.074583  0.0  0.0\n",
+       "1  0.205000  0.0  0.0\n",
+       "2  0.279583  0.0  0.0\n",
+       "3  0.410000  0.0  0.0\n",
+       "4  0.540417  0.0  0.0"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pm25_hourly = pm25[['Iws','Is','Ir']].apply(hourly)\n",
+    "pm25_hourly.head()"
    ]
   },
   {
@@ -404,7 +744,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,8 +768,53 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "    return np.std(x)/x.count()-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Iws   -0.999952\n",
+       "Is    -0.999999\n",
+       "Ir    -0.999999\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_sd(pm25_hourly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Iws   -0.998859\n",
+       "Is    -0.999983\n",
+       "Ir    -0.999968\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm25[['Iws','Is','Ir']].apply(sample_sd)"
    ]
   },
   {
